# Project_XAI

./: chapter4_scope_and_concept.md  scope and concept .docx  ~$ope and concept .docx
xai-retail-replenishment/: .gitignore  .tmp_rebuild_processed.py  README.md  pyproject.toml  requirements.txt
xai-retail-replenishment/app/: app.py  data_store.py  layout.py
xai-retail-replenishment/config/: config.yaml  paths.yaml
xai-retail-replenishment/notebooks/: 00_data_loading_test.ipynb  01_clean_data_test.ipynb  02_build_dataset_test.ipynb  03_train_lgbm_xgb_7d.ipynb  04_v3_selected_models_comparison.ipynb  05_tune_lgbm_v3_optuna.ipynb  06_train_lgbm_xgb_14d_comparison.ipynb  07_tune_lgbm_14_optuna.ipynb  08_train_lgbm_xgb_28d_comparison.ipynb  09_tune_lgbm_28_optuna.ipynb  10_validate_q1_only.ipynb  11_train_lgbm_xgb_7d_v3.ipynb  12_tune_lgbm_7d_optuna.ipynb  13_xai_q2_global_shap.ipynb  14_xai_q5_comparative_shap.ipynb  15_xai_q6_temporal_shap.ipynb  16_xai_q7_stockout.ipynb  17_xai_q3_q9_uncertainty.ipynb  18_xai_q4_counterfactual.ipynb  19_xai_q10_cost_impact.ipynb  20_decision_replenishment.ipynb  21_build_dataset_m5_v4.ipynb  22_train_lgbm_7d_v4.ipynb  23_build_dataset_14d_v4.ipynb  24_build_dataset_28d_v4.ipynb  25_train_14d_v4.ipynb  26_train_28d_v4.ipynb  27_tune_7d_v4.ipynb  28_tune_14d_v4.ipynb  29_tune_28d_v4.ipynb  30_predict_future_7d.ipynb  31_predict_future_14d.ipynb  32_predict_future_28d.ipynb
xai-retail-replenishment/src/: __init__.py
xai-retail-replenishment/tests/: __init__.py  test_features.py  test_metrics.py  test_replenishment_rules.py
(+66 files in other folders)
